Configuración de URL django

--- a/inmuebles/templates/inmuebles.html
+++ b/inmuebles/templates/inmuebles.html
@@ -17,7 +17,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2>Inmuebles</h2>
             <ol>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
                 <li>Inmuebles</li>
             </ol>
         </div>
@@ -205,7 +205,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-viviendas">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_1.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -234,7 +234,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -244,7 +244,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-viviendas">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_2.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -273,7 +273,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -283,7 +283,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-locales">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_3.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -312,7 +312,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -322,7 +322,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-locales">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_4.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -351,7 +351,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -361,7 +361,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-oficinas">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_5.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -390,7 +390,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -400,7 +400,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-terrenos">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_6.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -429,7 +429,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -439,7 +439,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-terrenos">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_7.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -468,7 +468,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -478,7 +478,7 @@
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-industrias">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_8.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -507,7 +507,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
@@ -518,7 +518,7 @@
                                         class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-instituciones">
                                         <div class="property-item mb-30">
 
-                                            <a href="inmueble-ref" class="img">
+                                            <a href="{% url 'inmuebles:inmueble-ref' %}" class="img">
                                                 <img src="{% static 'assets/img/inmuebles/img_1.jpg' %}" alt="Image"
                                                     class="img-fluid">
                                             </a>
@@ -547,7 +547,7 @@
                                                         </span>
                                                     </div>
 
-                                                    <a href="inmueble-ref" class="btn btn-primary py-2 px-3">Ver
+                                                    <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver
                                                         más</a>
                                                 </div>
                                             </div>
