--- a/nosotros/templates/nosotros.html
+++ b/nosotros/templates/nosotros.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2>Acerca de Nosotros</h2>
             <ol>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
                 <li>Acerca de Nosotros</li>
             </ol>
         </div>
