--- a/servicios/templates/servicios.html
+++ b/servicios/templates/servicios.html
@@ -16,7 +16,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2>Servicios</h2>
             <ol>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
                 <li>Servicios</li>
             </ol>
         </div>
