--- a/agentes/templates/agentes.html
+++ b/agentes/templates/agentes.html
@@ -15,7 +15,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2>Nuestros Agentes</h2>
             <ol>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
                 <li>Nuestros Agentes</li>
             </ol>
         </div>
