--- a/contacto/templates/contacto.html
+++ b/contacto/templates/contacto.html
@@ -13,7 +13,7 @@
         <div class="d-flex justify-content-between align-items-center">
             <h2>Contacto</h2>
             <ol>
-                <li><a href="/">Inicio</a></li>
+                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
                 <li>Contacto</li>
             </ol>
         </div>
