--- a/inmuebles/static/assets/css/inmuebles.css
+++ b/inmuebles/static/assets/css/inmuebles.css
@@ -59,7 +59,7 @@
     color: #fff;
 }
 
-.inmuebles #paises, #estados, #municipios {
+.inmuebles #paises, #estados, #municipios, #parroquias, #ciudades {
     padding: 30px;
     box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
 }
