--- a/inmuebles/templates/InmuebleList/filtros.html
+++ b/inmuebles/templates/InmuebleList/filtros.html
@@ -14,7 +14,7 @@
             </form>
         </div><!-- End sidebar search formn-->
         <div class="row">
-            <span>Ubicación</span>
+            <strong>Ubicación</strong>
         </div>
         <div class="row">
             <button id="btnMostrarpaises"
@@ -53,6 +53,34 @@
 
             <div id="municipios" class="mt-3 collapse overflow-auto" style="max-height: 200px;">
                 <form id="formMunicipios">
+
+                </form>
+            </div>
+        </div>
+
+        <div class="row">
+            <button id="btnMostrarParroquias"
+                class="btn btn-selec d-flex d-none justify-content-between align-items-center">
+                <span>Seleccionar Parroquia</span>
+                <span><i class='bx bx-chevron-down'></i></span>
+            </button>
+
+            <div id="parroquias" class="mt-3 collapse overflow-auto" style="max-height: 200px;">
+                <form id="formParroquias">
+
+                </form>
+            </div>
+        </div>
+
+        <div class="row">
+            <button id="btnMostrarCiudades"
+                class="btn btn-selec d-flex d-none justify-content-between align-items-center">
+                <span>Seleccionar Ciudad</span>
+                <span><i class='bx bx-chevron-down'></i></span>
+            </button>
+
+            <div id="ciudades" class="mt-3 collapse overflow-auto" style="max-height: 200px;">
+                <form id="formCiudades">
 
                 </form>
             </div>
