--- a/inmuebles/templates/InmuebleList/index.html
+++ b/inmuebles/templates/InmuebleList/index.html
@@ -1,50 +1,44 @@
 {% extends 'base.html' %}
 
-{% block active_inmuebles %}active{% endblock %}
+{% block active_inmuebles %}
+  active
+{% endblock active_inmuebles %}
 
 {% load static %}
 
-
 {% block css %}
-<link href="{% static 'assets/css/inmuebles.css' %}" rel="stylesheet">
-{% endblock %}
-
+  <link href="{% static 'assets/css/inmuebles.css' %}" rel="stylesheet" />
+{% endblock css %}
 
 {% block content %}
-<section id="breadcrumbs" class="breadcrumbs">
+  <section id="breadcrumbs" class="breadcrumbs">
     <div class="container">
-
-        <div class="d-flex justify-content-between align-items-center">
-            <h2>Inmuebles</h2>
-            <ol>
-                <li><a href="{% url 'inicio:home' %}">Inicio</a></li>
-                <li>Inmuebles</li>
-            </ol>
-        </div>
-
+      <div class="d-flex justify-content-between align-items-center">
+        <h2>Inmuebles</h2>
+        <ol>
+          <li>
+            <a href="{% url 'inicio:home' %}">Inicio</a>
+          </li>
+          <li>Inmuebles</li>
+        </ol>
+      </div>
     </div>
-</section><!-- End Breadcrumbs -->
+  </section>
+  <!-- End Breadcrumbs -->
 
-<section id="inmuebles" class="inmuebles">
-
+  <section id="inmuebles" class="inmuebles">
     <div class="container-fluid" data-aos="fade-up">
-        <div class="row">
-            
-            {% include "./filtros.html" %}
-            {% include "./inmuebles.html" %}
-            
-        </div>
+      <div class="row">
+        {% include './filtros.html' %}
+        {% include './inmuebles.html' %}
+      </div>
     </div>
-</section>
-{% endblock %}
+  </section>
+{% endblock content %}
 
 {% block js %}
-
-<script>
-    var datos = {{ data|safe }};
-</script>
-
-<script  src="{% static 'assets/js/inmuebles.js' %}"></script>
-<script  src="{% static 'assets/js/data.js' %}"></script>
-
-{% endblock %}
+  <script> var datos = {{ data|safe }} </script>
+  <script src="{% static 'assets/js/InmuebleList/main.js' %}"></script>
+  <script src="{% static 'assets/js/InmuebleList/form.js' %}"></script>
+  <script src="{% static 'assets/js/InmuebleList/data.js' %}"></script>
+{% endblock js %}
