--- a/inmuebles/templates/InmuebleDetail/index.html
+++ b/inmuebles/templates/InmuebleDetail/index.html
@@ -201,12 +201,12 @@
                     <ul>
                         <li><strong>País</strong>: Venezuela</li>
                         <li><strong>Estado</strong>: Lara</li>
+                        <li><strong>Municipio</strong>: Los Crepúsculos</li>
+                        <li><strong>Parroquia</strong>: Los Crepúsculos</li>
                         <li><strong>Ciudad</strong>: Barquisimeto</li>
-                        <li><strong>Urbanización</strong>: Los Crepúsculos</li>
-                        <li><strong>Dirección</strong>: Avenida 3, Los Crepúsculos, Barquisimeto, Iribarren, Lara, 3023,
-                            VEN
-                        </li>
+                        <li><strong>Dirección</strong>: Avenida 3, Los Crepúsculos, Barquisimeto, Iribarren, Lara, 3023, VEN</li>
                     </ul>
+                    
 
                 </div>
 
