--- a/agentes/templates/AgenteListView/index.html
+++ b/agentes/templates/AgenteListView/index.html
@@ -61,7 +61,7 @@
               </div>
               <div class="member-info">
                 <h4>{{ agente.nombre }}</h4>
-                <i class='bx bxs-phone text-center'> {{ agente.telefono }}</i>
+                <i class='bx bxs-phone'> {{ agente.telefono }}</i>
               </div>
             </div>
           </div>
