--- a/agentes/templates/AgenteListView/index.html
+++ b/agentes/templates/AgenteListView/index.html
@@ -37,7 +37,7 @@
           <div class="col-lg-3 col-md-6 d-flex align-items-stretch">
             <div class="member" data-aos="fade-up">
               <div class="member-img">
-                <img src="/media/{{ agente.foto }}" class="img-fluid" alt="" />
+                <img src={{ agente.foto.url }} class="img-fluid" alt="" />
 
                 {% if agente.twitter or agente.facebook or agente.instagram or agente.linkedin %}
                   <div class="social">
