--- a/inmuebles/templates/InmuebleList/inmuebles.html
+++ b/inmuebles/templates/InmuebleList/inmuebles.html
@@ -5,7 +5,7 @@
     <ul id="inmuebles-flters">
       <li data-filter="*" class="filter-active">All</li>
       {% for tipo in filtro_tipo %}
-        <li data-filter=".filter-{{ tipo|cut:" " }}">{{ tipo }}</li>
+        <li data-filter=".filter-{{ tipo|cut:' ' }}">{{ tipo }}</li>
       {% endfor %}
     </ul>
 
@@ -14,21 +14,22 @@
         <div class="container">
           <div class="row">
             {% for inmueble in inmuebles %}
-              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-{{ inmueble.tipo|cut:" " }}">
+              <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 inmuebles-item filter-{{ inmueble.tipo|cut:' ' }}">
                 <div class="property-item mb-30">
                   <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active">
-                        <a href="{% url 'inmuebles:detail inmueble.id' %}" class="img"><img src="{% static 'assets/img/inmuebles/img_1.jpg' %}" alt="Image" class="img-fluid" /></a>
+                        <a href="{% url 'inmuebles:detail' inmueble.id %}" class="img"><img src="{% static 'assets/img/inmuebles/img_1.jpg' %}" alt="Image" class="img-fluid" /></a>
                       </div>
                       <div class="carousel-item">
-                        <a href="{% url 'inmuebles:detail inmueble.id' %}" class="img"><img src="{% static 'assets/img/inmuebles/img_2.jpg' %}" alt="Image" class="img-fluid" /></a>
+                        <a href="{% url 'inmuebles:detail' inmueble.id %}" class="img"><img src="{% static 'assets/img/inmuebles/img_2.jpg' %}" alt="Image" class="img-fluid" /></a>
                       </div>
                       <div class="carousel-item">
-                        <a href="{% url 'inmuebles:detail inmueble.id' %}" class="img"><img src="{% static 'assets/img/inmuebles/img_3.jpg' %}" alt="Image" class="img-fluid" /></a>
+                        <a href="{% url 'inmuebles:detail' inmueble.id %}" class="img"><img src="{% static 'assets/img/inmuebles/img_3.jpg' %}" alt="Image" class="img-fluid" /></a>
                       </div>
                     </div>
                   </div>
+
                   <div class="property-content text-center">
                     <span class="city text-black-50">{{ inmueble.transaccion }} - {{ inmueble.tipo }}</span>
 
@@ -40,23 +41,29 @@
                       <span class="city d-block mb-3">{{ inmueble.ubicacion.estado.nombre }}, {{ inmueble.ubicacion.pais.nombre }}</span>
 
                       <div class="specs d-flex mb-4" style="justify-content: center;">
-                        <span class="d-block me-3">
-                          <span class="bx bxs-bed me-2"></span>
-                          <span class="caption">{{ inmueble.habitaciones }} Hab.</span>
-                        </span>
+                        {% if inmueble.habitaciones != 0 %}
+                          <span class="d-block me-3">
+                            <span class="bx bxs-bed me-2"></span>
+                            <span class="caption">{{ inmueble.habitaciones }} Hab.</span>
+                          </span>
+                        {% endif %}
 
-                        <span class="d-block me-3">
-                          <span class="bx bxs-bath me-2"></span>
-                          <span class="caption">{{ inmueble.banos }} Baños</span>
-                        </span>
+                        {% if inmueble.banos != 0 %}
+                          <span class="d-block me-3">
+                            <span class="bx bxs-bath me-2"></span>
+                            <span class="caption">{{ inmueble.banos }} Baños</span>
+                          </span>
+                        {% endif %}
 
-                        <span class="d-block me-3">
-                          <span class="bx bxs-car-garage me-2"></span>
-                          <span class="caption">{{ inmueble.puestos_estacionamiento }} Est.</span>
-                        </span>
+                        {% if inmueble.puestos_estacionamiento != 0 %}
+                          <span class="d-block me-3">
+                            <span class="bx bxs-car-garage me-2"></span>
+                            <span class="caption">{{ inmueble.puestos_estacionamiento }} Est.</span>
+                          </span>
+                        {% endif %}
                       </div>
 
-                      <a href="{% url 'inmuebles:inmueble-ref' %}" class="btn btn-primary py-2 px-3">Ver más</a>
+                      <a href="{% url 'inmuebles:detail' inmueble.id %}" class="btn btn-primary py-2 px-3">Ver más</a>
                     </div>
                   </div>
                 </div> <!-- .item -->
