--- a/acceso/static/assets/css/estilos_acceso.css
+++ b/acceso/static/assets/css/estilos_acceso.css
@@ -30,10 +30,10 @@
 	align-items: center;
 	min-height: 100vh;
 	font-family: 'Jost', sans-serif;
-	background: #3886c1;
 	position: relative;
 	overflow: hidden;
 	flex-direction: column; /* Alinea los elementos en columna */
+	background-color: #f6f3f2;
 }
 
 .main {
@@ -45,6 +45,7 @@
 	transition: height 0.5s ease;
 	/* Agrega una transición suave en la altura */
 	text-align: center;
+	background: rgb(46, 45, 45);
 }
 
 .main.small {
@@ -67,25 +68,32 @@
 
 .contenido .title {
 	color: #fff;
-	font-size: 2.3em;
+	font-size: 2.7em;
 	justify-content: center;
 	display: flex;
-	margin: 60px;
 	cursor: pointer;
 	transition: .5s ease-in-out;
+}
+
+.contenido .login .title {
+	margin: 40px 10px 40px 10px;
+}
+
+.contenido .signup .title {
+	margin: 65px 10px 40px 10px;
 }
 
 .contenido input {
 	width: 60%;
 	height: 20px;
-	background: #e0dede;
+	background: white;
 	justify-content: center;
 	display: flex;
-	padding: 12px;
+	margin: 2px;
 	border: none;
 	outline: none;
 	border-radius: 10px;
-	box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+	box-shadow: 0px 2px 6px rgba(250, 247, 247, 0);
 	/* Sombra suave */
 	transform: scale(1.05);
 }
@@ -105,30 +113,25 @@
 
 .contenido input:focus {
 	outline: none;
-	box-shadow: 0px 0px 8px #1A659E;
+	box-shadow: 4px 4px 8px #0095ff;
 	/* Sombra con tono cósmico */
 }
 
-.login input:focus {
-	outline: none;
-	box-shadow: 0px 0px 8px #68B3D1;
-	/* Sombra con tono cósmico */
-}
+
 
 .contenido button {
 	width: 60%;
-	height: 40px;
-	margin: 10px auto;
+	height: 50px;
+	margin: 30px auto 10px auto;
 	justify-content: center;
 	display: block;
 	color: #fff;
+	font-size: 1.3em;
 	background: #68B3D1;
 	transition: background 0.3s ease, transform 0.2s ease;
 	/* Animaciones */
 	box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 	/* Sombra suave */
-	font-size: 1em;
-	margin-top: 20px;
 	outline: none;
 	border: none;
 	border-radius: 5px;
@@ -137,13 +140,21 @@
 }
 
 .contenido button:hover {
-	color: #68B3D1;
-	background: #fff;
 	/* Gradiente rojo al pasar el cursor */
 	transform: scale(1.05);
 	/* Aumentar ligeramente el tamaño */
 	box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.2);
 	/* Sombra más pronunciada */
+}
+
+.contenido .login button:hover {
+	color: #68B3D1;
+	background: #fff;
+}
+
+.contenido .signup button:hover {
+	color: #ffffff;
+	background: rgb(46, 45, 45);
 }
 
 .signup {
@@ -156,11 +167,11 @@
 
 .signup .title {
 	color: #3886c1;
-	transform: scale(.6);
+	transform: scale(.8);
 }
 
 #chk:checked~.signup {
-	transform: translateY(-780px);
+	transform: translateY(-793px);
 }
 
 #chk:checked~.signup .title {
@@ -168,5 +179,7 @@
 }
 
 #chk:checked~.login .title {
-	transform: scale(.6);
+	transform: scale(.8);
+	margin-top: 20px;
+	text-align: start;
 }
