--- a/inmuebles/templates/InmuebleList/filtros.html
+++ b/inmuebles/templates/InmuebleList/filtros.html
@@ -100,7 +100,7 @@
             <div id="habitacionesGroup" class="btn-group" role="group" aria-label="Basic radio toggle button group">
 
                 <input type="radio" class="btn-check" name="habitacion" value="1" id="habitación-1+"
-                    autocomplete="off">
+                    autocomplete="off" checked>
                 <label class="btn btn-outline-primary" for="habitación-1+">1+</label>
 
                 <input type="radio" class="btn-check" name="habitacion" value="2" id="habitación-2+"
